--- a/bicemodded/localisation/english/bftb_decisions_l_english.yml
+++ b/bicemodded/localisation/english/bftb_decisions_l_english.yml
@@ -47,9 +47,12 @@
  GRE_rebuke_italian_investment:0 "Rebuke [FROM.GetAdjective] Investment"
  GRE_italian_influence_shunned_tt:0 "Shunning the §Y[FROM.GetAdjective]s§! after exploiting their generosity could lead to §Ywar§!!\n"
  GRE_attend_talks_with_the_presidium:0 "Attend Talks With the Presidium"
+ GRE_attend_talks_with_the_presidium_desc:0 "We will send representatives from our nation to the presidium in [FROM.GetNameDefCap] to discuss the potential of our nation persuade them to make a small investment into our military industry."
  GRE_host_soviet_bureaucrats_in_greece:0 "Host [FROM.GetAdjective] Bureaucrats in [ROOT.GetNameDef]"
+ GRE_host_soviet_bureaucrats_in_greece_desc:0 "Representatives from [FROM.GetNameDefCap] will tour our country and then decide if they want to make a moderate investment in our military industry."
  GRE_soviet_influence_tt:0 "Relying too heavily on the §Y[FROM.GetAdjective]s§! could place our sovereignty in peril.\n"
  GRE_invest_back_into_neglected_siberian_regions:0 "Invest Back Into Neglected Siberian Provinces"
+ GRE_invest_back_into_neglected_siberian_regions_desc:0 "We will offer [FROM.GetNameDefCap] to invest in their most neglected regions, in a show of reciprocity that will allow us to reduce the influence the [FROM.GetAdjective]s hold over us."
  GRE_rebuke_soviet_investment:0 "Rebuke [FROM.GetAdjective] Investment"
  GRE_soviet_influence_shunned_tt:0 "Shunning the §Y[FROM.GetAdjective]s§! after exploiting their generosity could lead to §Ywar§!!"
  GRE_pay_back_debt_to_the_ifc_category:0 "Managing the Debt to the I.F.C."
@@ -282,6 +285,7 @@
  TUR_karabuk_iron_steel_factory_modernised_flag:0 "The §YKarabuk Iron-Steel Factory§! has been modernized through the §YSanayiciler§!."
  TUR_sponsor_petrol_olfisis_formation:0 "Sponsor Petrol Ofisi's Formation"
  TUR_sponsor_petrol_olfisis_formation_desc:0 "There has been pressure on the government to form a state organization dedicated to oil excavation and petroleum-related energy concerns."
+ TUR_petrol_ofisi_formed:0 "Petrol Ofisi's formation has been sponsored.\n"
  TUR_repeal_the_wealth_tax:0 "Repeal the Wealth Tax"
  TUR_repeal_the_wealth_tax_desc:0 "This tax on non-Muslims is non-sustainable and a blemish on our Kemalist record; the right thing to do is to repeal the tax immediately."
  TUR_repeal_the_faith_tax:0 "Repeal the Faith Tax"
