--- a/bicemodded/localisation/english/bftb_focus_l_english.yml
+++ b/bicemodded/localisation/english/bftb_focus_l_english.yml
@@ -18,7 +18,7 @@
  GRE_venerate_the_ancient_hellenes:0 "Venerate the Ancient Hellenes"
  GRE_venerate_the_ancient_hellenes_desc:0 "Are we not the descendants of the venerable Greeks of old? \nDo we not share blood with those masters of polemics, philosophy, and war? We shall instill a strong sense of pride back into our people, so that we may take our place as the guiding star of Europe once again."
  GRE_the_birthplace_of_democracy:0 "The Birthplace of Democracy"
- GRE_the_birthplace_of_democracy_desc:0 "Tyrants have seldom held respect in the hearts and minds of Greeks, and that is a trait we have proudly maintained since the time of Pericles! Democracy is one of the manyfruits of our genius, and it is only right that we should defend it against Roman and Teuton inspired tyranny!"
+ GRE_the_birthplace_of_democracy_desc:1 "Tyrants have seldom held respect in the hearts and minds of Greeks, and that is a trait we have proudly maintained since the time of Pericles! Democracy is one of the many fruits of our genius, and it is only right that we should defend it against Roman and Teuton inspired tyranny!"
  GRE_nationalized_banks:0 "Nationalized Banks"
  GRE_nationalized_banks_desc:0 "Deutsche Bank and the Bank of England have for too long exploited the people of Greece: misappropriating their already meager earnings and punishing them for the actions of a dictatorial government they did not elect! We say that the Greek people shall be exploited no longer, and that their funds should go to their government instead!"
  GRE_soviet_subsidised_railways:0 "Soviet Subsidized Railways"
@@ -517,8 +517,13 @@
  TUR_edirne_research_exchange_desc:0 "We shall seize the initiative and form a public institution that encourages a multinational free flow of ideas so that we can stand on the forefront of all the latest technological and scientific advancements in the Balkan Pact."
  TUR_crush_the_warmongers_in_rome:0 "Crush the Warmongers in Rome"
  TUR_crush_the_warmongers_in_rome_desc:0 "The [ITA.GetAdjective]s are the source of all woe in the Mediterranean. They are a malevolent tumour that believe they can spread into Southern Europe like a cancer by right of might. We shall take the fight to them and give them so many doses of their own medicine that they choke on it."
- TUR_brace_against_the_red_menace:0 "Brace Against the Red Menace"
- TUR_brace_against_the_red_menace_desc:0 "To the north lies the perfidious threat of communism and its chief sponsor in the world. [SOV.GetNameDef] is a pox on this world, and the Balkan Entente will be doing humankind a favor by dismantling the [SOV.GetAdjective] hegemony."
+ TUR_brace_against_the_red_menace:1 "[GetBraceAgainstTheRedMenaceName]"
+ TUR_brace_against_the_red_menace_desc:1 "[GetBraceAgainstTheRedMenaceDesc]"
+ TUR_brace_against_the_red_menace_communism:0 "Brace Against the Red Menace"
+ TUR_brace_against_the_red_menace_communism_desc:0 "To the north lies the perfidious threat of communism and its chief sponsor in the world. [SOV.GetNameDef] is a pox on this world, and the Balkan Entente will be doing humankind a favor by dismantling the [SOV.GetAdjective] hegemony."
+ TUR_brace_against_the_red_menace_generic:0 "Brace Against the [SOV.GetAdjective] Menace"
+ TUR_brace_against_the_red_menace_generic_desc:0 "To the north lies the perfidious Russia. Forever have they tried to meddle in Balkan and Turkish affairs. The Balkan Entente will be doing humankind a favor by dismantling the [SOV.GetAdjective] hegemony."
+
  TUR_reconfigure_our_foreign_policy:0 "Reconfigure Turkish Foreign Policy"
  TUR_reconfigure_our_foreign_policy_desc:0 "[TUR.GetAdjective] foreign policy has been focused on domestic affairs and keeping foreign policy interactions consigned mostly to our neighbors, but the times have changed and our foreign policy must reflect that. It is time long overdue that we started to deal more with the major powers of the world."
  TUR_the_anglo_turkish_agreement:0 "The Anglo-Turkish Agreement"
@@ -561,7 +566,7 @@
  TUR_the_german_turkish_friendship_treaty_desc:1 "[GER.GetNameDefCap] and [ROOT.GetNameDef] are natural friends. We do not have to see eye-to-eye on every issue, for our recent histories are not all too dissimilar. [ENG.GetAdjective] efforts to control our foreign policy will come to naught: we shall prove that with a new Treaty of Friendship, signed unilaterally between [GER.GetLeader] and [ROOT.GetLeader]."
  TUR_the_clodius_agreement:0 "The Clodius Agreement"
  TUR_the_clodius_agreement_desc:0 "The [GER.GetAdjective]s have approached us with a favorable deal: chromium ore in exchange for the means to produce more military equipment of our own. By becoming [GER.GetNameDef]'s primary source of chromium ore, we also become entitled to [GER.GetNameDef]'s protection which is quite an enviable position to be in nowadays."
- TUR_clodius_agreement_tt:1 "Every state that produces §Y23§! or more units of §YChromium§! will receive two levels of §YInfrastructure§! and two §YMilitary Factories§!."
+ TUR_clodius_agreement_tt:1 "Every state that produces §Y65§! or more units of §YChromium§! will receive three levels of §YInfrastructure§! and two §YMilitary Factories§!."
  TUR_purchase_italian_light_tanks:0 "Purchase Italian Light Tanks"
  TUR_purchase_italian_light_tanks_desc:0 "You cannot have a modern armed forces without strong, reliable armor supporting the backbone of the army. We simply must get our hands on some of our own, and is there any doubt that the greatest tanks produced in the world come out of [ITA.GetNameDef]?"
  TUR_approve_the_funkplan:0 "Approve the Funkplan"
@@ -598,8 +603,12 @@
  TUR_end_the_british_hegemony_desc:0 "This world cannot know peace until the perfidious and eternal reign of the [ENG.GetAdjective] is brought to a violent and definitive end. This is not war, it is duty."
  TUR_punish_french_weakness:0 "Punish French Weakness"
  TUR_punish_french_weakness_desc:0 "The [FRA.GetAdjective] tricolor once flew over half of Europe during the days of Napoleon. Today, it is not even fit to fly over Paris. It is past time to put an end to the global embarrassment that is the nation known as '[FRA.GetNameDef]'."
- TUR_victory_or_death_against_communism:0 "Victory or Death Against Communism"
- TUR_victory_or_death_against_communism_desc:0 "The global fight against communism is a righteous one. The fight goes beyond simple ideology: we are fighting for our very way of life against a terrifying monolith that destroys everything it touches. We cannot afford to lose."
+ TUR_victory_or_death_against_communism:1 "[GetVictoryOrDeathAgainstCommunismName]"
+ TUR_victory_or_death_against_communism_desc:1 "[GetVictoryOrDeathAgainstCommunismDesc]"
+ TUR_victory_or_death_against_communism_communism:0 "Victory or Death Against Communism"
+ TUR_victory_or_death_against_communism_communism_desc:0 "The global fight against communism is a righteous one. The fight goes beyond simple ideology: we are fighting for our very way of life against a terrifying monolith that destroys everything it touches. We cannot afford to lose."
+ TUR_victory_or_death_against_communism_generic:0 "Victory Against Russian Imperialism"
+ TUR_victory_or_death_against_communism_generic_desc:0 "The global fight against [SOG.GetAdjective] imperialism is a righteous one. The fight goes beyond border disputes: we are fighting for our very way of life against a terrifying expansionist empire that destroys everything it touches. We cannot afford to lose."
  TUR_increase_german_military_aid:0 "Increase German Military Aid"
  TUR_increase_german_military_aid_desc:0 "If the [GER.GetAdjective]s expect us to keep up with their advances on the frontlines then they need to share some of the copious amounts of technology they have gathered over the years. Of course, we would like to fight in a more intensive capacity - but some [GER.GetAdjective] aid could go a long way in facilitating that desire."
  TUR_cooperative_research_centers:0 "Cooperative Research Centers"
@@ -881,7 +890,7 @@
  BUL_the_peoples_republic_of_bulgaria:0 "The People's Republic of Bulgaria"
  BUL_the_peoples_republic_of_bulgaria_desc:0 "Now that we have gotten rid of the Bulgarian monarchy, we must make some much-needed changes to the governance of our nation. It is time to end the era of despotism and oppression that has plagued the country for so many years and form the People's Republic of Bulgaria. \nUnity makes strength!"
  BUL_soviet_bulgarian_treaty_of_mutual_assistance:0 "Soviet-Bulgarian Treaty of Mutual Assistance"
- BUL_soviet_bulgarian_treaty_of_mutual_assistance_desc:0 "The [SOV.GetNameDef] represents a powerful ally that can boost our economy and help us ensure the territorial integrity of [ROOT.GetNameDef] in these difficult times. We must try to strengthen ties with the [SOV.GetAdjective] government and gain its valuable support if we are to prevail against the many enemies that surround us."
+ BUL_soviet_bulgarian_treaty_of_mutual_assistance_desc:1 "The [SOU.GetNameDef] represents a powerful ally that can boost our economy and help us ensure the territorial integrity of [ROOT.GetNameDef] in these difficult times. We must try to strengthen ties with the [SOU.GetAdjective] government and gain its valuable support if we are to prevail against the many enemies that surround us."
  BUL_follow_the_stalinist_doctrine:0 "Follow the Stalinist Doctrine"
  BUL_follow_the_stalinist_doctrine_desc:0 "It is time for us to formally apply for official [SOV.GetFactionName] membership so that we can develop better cooperation between [SOV.GetNameDef] and [ROOT.GetNameDef], not only on economic and industrial issues, but also on military matters."
  BUL_joint_research_effort:0 "Joint Research Effort"
@@ -1111,7 +1120,7 @@
  BUL_state_is_in_the_aegean_sea_tt:0 "State is in the Aegean Sea"
  BUL_state_is_in_the_black_sea_tt:0 "State is in the Black Sea"
  BUL_state_is_in_the_adriatic_sea_tt:0 "State is in the Adriatic Sea"
- BUL_stability_impact_tt:0 "WIll lose stability based on §YCommunism§! support and [GetBsName] §YPopularity§!"
+ BUL_stability_impact_tt:1 "Will lose stability based on §YCommunism§! support and [GetBsName] §YPopularity§!"
  BUL_form_a_regency_council_tt:0 "A Regency Council will be appointed to exercise the country's government and tutelage over young Simeon II."
  BUL_freedom_of_press_trigger_tt:0 "Has not selected Institute Press Censorship"
  BUL_appoint_right_wing_ministers_tt:1 "Unlocks decisions to cooperate with the [GetNsmName]. \nUnlocks decisions to repress the [GetNsmName]."
