--- a/bicemodded/localisation/english/bftb_ideas_l_english.yml
+++ b/bicemodded/localisation/english/bftb_ideas_l_english.yml
@@ -492,6 +492,7 @@
  TUR_ahmet_ali_celikten:0 "Ahmet Ali Çelikten"
  TUR_vecihi_hurkus:0 "Vecihi Hürkuş"
  TUR_salih_omurtak:0 "Salih Omurtak"
+ TUR_mehmet_salih_omurtak:0 "Salih Omurtak"
  TUR_fevzi_cakmak_command:0 "Fevzi Çakmak"
  TUR_cemil_cahit_toydemir:0 "Cemil Cahit Toydemir"
  TUR_fahrettin_altay:0 "Fahrettin Altay"
@@ -517,27 +518,29 @@
  killigil_endustrileri:0 "Killigil Endustrileri"
  tcdd:0 "Türkiye Cumhuriyeti Devlet Demiryolları"
  petrol_ofisi:0 "Petrol Ofisi"
- koc_ticaret_as_armor:0 "Keçi Ticaret A.Ş."
- koc_ticaret_as_shipyard:0 "Keçi Ticaret A.Ş."
- koc_ticaret_as_defense_industry:0 "Keçi Ticaret A.Ş."
- koc_ticaret_as_monopoly:0 "Keçi Ticaret A.Ş."
+ koc_ticaret_as_armor:1 "Keçi Ticaret A.Ş."
+ koc_ticaret_as_shipyard:1 "Keçi Ticaret A.Ş."
+ koc_ticaret_as_defense_industry:1 "Keçi Ticaret A.Ş."
+ koc_ticaret_as_monopoly:1 "Keçi Ticaret A.Ş."
  TUR_debt_council_has_no_sway_tt:0 "The §YDebt Council§! has no sway over [ROOT.GetAdjective] economic affairs."
- TUR_a_monopoly_has_been_formed_tt:0 "§YKeçi Ticaret§! has been granted a monopoly over [ROOT.GetNameDef]'s budding industrial base."
+ TUR_a_monopoly_has_been_formed_tt:1 "§YKeçi Ticaret§! has been granted a monopoly over [ROOT.GetNameDef]'s budding industrial base."
  TUR_can_only_have_one_prime_minister_tt:0 "The government can only have one §YPrime Minister§!."
  TUR_ottoman_officers_invited_back:0 "The §YOttoman Loyalists§! have been invited to return to active service."
+ TUR_cannot_form_kurdish_collaboration_government_tt:0 "§Y[TUR.GetNameDef]§! can never form a Kurdish Collaboration Government."
+ TUR_has_a_prime_minister_tt:0 "§Y[TUR.GetNameDef]§! has a Prime Minister."
 
 
- BUL_army_restrictions:0 "§RArmy Restrictions§!"
+ BUL_army_restrictions:0 "Army Restrictions"
  BUL_army_restrictions_desc:0 "Another consequence of the Treaty of Neuilly-sur-Seine are the severe restrictions imposed on our army, not only do they prohibit compulsory military service, limit the amount of troops and officers in our forces and prevent us from maintaining any advanced equipment, they also prohibit any military maneuvers or campaign planning and even stipulate the number of rifles we can use."
  BUL_army_restrictions_mobilization_law_tt:1 "§RCannot increase conscription law or declare wars.\nCannot train units, disband units, or edit unit templates.\nCannot produce armor, aircraft or ships§!."
- BUL_second_national_catastrophe:0 "§RSecond National Catastrophe§!"
+ BUL_second_national_catastrophe:0 "Second National Catastrophe"
  BUL_second_national_catastrophe_desc:0 "Following our defeat in the Great War, the Treaty of Neuilly-sur-Seine forced us to cede vast territories that now belong to Yugoslavia, Greece, and Romania, and until recently the League of Nations required us to prioritize the payment of large sums of war reparations, crippling our economy and inevitably increasing the debt of our country. The national spirit has never really recovered from this blow, so it is no wonder why this treaty is popularly known in Bulgaria as the Second National Catastrophe..."
  BUL_second_national_catastrophe_tt:0 "Will be removed if Greater Bulgaria is restored:\nHas full control of §YSofia§!, §YPlovdiv§!, §YMoesia§!, §YBurgas§!, §YSouthern Serbia§!, §YMacedonia§!, §YCentral Macedonia§!, §YThrace§!, §YDobrudja§!."
- BUL_imro_01:0 "§RIMRO§!"
+ BUL_imro_01:0 "IMRO"
  BUL_imro_01_desc:0 "The constant fratricidal crimes committed by the Internal Macedonian Revolutionary Organization have seriously damaged our international relations and led in 1934 to the military crackdown of the IMRO stronghold in Petrich, dealing a critical blow to the organization and forcing most of their leaders to flee abroad. However, some revolutionary cells are still active in Bulgaria, and most of our diplomatic relations remain in a poor state."
- BUL_imro_02:0 "§OIMRO§!"
+ BUL_imro_02:0 "IMRO"
  BUL_imro_02_desc:0 "The constant fratricidal crimes committed by the Internal Macedonian Revolutionary Organization have seriously damaged our international relations for far too long, but at least now the foreign powers are finally acknowledging our efforts to destroy the organization for the sake of maintaining peace in the Balkans."
- BUL_imro_04:0 "§OIMRO§!"
+ BUL_imro_04:0 "IMRO"
  BUL_imro_04_desc:0 "Our cooperation with the Internal Macedonian Revolutionary Organization has been widely criticized not only by our neighbors, but also by multiple foreign powers and even by some sectors of our population."
  BUL_tsar_boris_positive_01:0 "Tsar Boris III"
  BUL_tsar_boris_positive_01_desc:0 "Boris's policies have proven to be very beneficial for Bulgaria and for this reason the Tsar enjoys a very good popular opinion not only within the elites and the most privileged circles, but also among the most humble classes."
@@ -545,7 +548,7 @@
  BUL_tsar_boris_negative_01_desc:0 "Boris III knows that his dictatorial regime is coming to an end and, unsurprisingly, he refuses to accept any changes proposed by our ministers, appealing to loyalist members in the government to derail all of our proposals and desperately trying to keep control of Bulgarian politics for as long as he can."
  BUL_zveno_ns:0 "Zveno"
  BUL_zveno_ns_desc:0 "The dissolution of the Military Union was a necessary matter, but it has had its consequences: we finally got rid of several Zveno individuals who were doing nothing more than hindering the chain of command, but we also lost valuable instructors and experienced officers at our military academies."
- BUL_fatherland_front_positive:0 "§RThe Fatherland Front§!"
+ BUL_fatherland_front_positive:0 "The Fatherland Front"
  BUL_fatherland_front_positive_desc:1 "Originally established by the Bulgarian Workers' Party as a political resistance movement to confront oppression and fascism in Bulgaria, the Fatherland Front is now made up of members from multiple organizations, united against all those who seek to subdue the Bulgarian proletariat."
  BUL_fatherland_front_negative_desc:0 "The Fatherland Front is a political resistance movement originally established by the communist Bulgarian Workers Party, but that now includes multiple groups and organizations with widely contrasting ideologies, united against the pro-German military dictatorship in Bulgaria."
  BUL_paramilitary_organizations:0 "Paramilitary Organizations"
@@ -610,82 +613,6 @@
  BUL_third_bulgarian_state:0 "Third Bulgarian State"
  BUL_third_bulgarian_state_desc:0 "[GetConsolidateTheThirdBulgarianStateFocusLoc]"
 
- BUL_georgi_ivanov_kyoseivanov_bftb:0 "Georgi Kyoseivanov"
- BUL_georgi_ivanov_kyoseivanov_bftb_desc:0 "Georgi Ivanov Kyoseivanov"
- BUL_stefan_nedev:1 "Stefan Nedev"
- BUL_stefan_nedev_desc:0 "Stefan Savov Nedev"
- BUL_stoycho_mushanov:0 "Stoycho Mushanov"
- BUL_stoycho_mushanov_desc:0 "Stoycho Stefanov Mushanov"
- BUL_nikola_petkov:0 "Nikola Petkov"
- BUL_nikola_petkov_desc:0 "Nikola Dimitrov Petkov"
- BUL_konstantin_muraviev_bftb:0 "Konstantin Muraviev"
- BUL_konstantin_muraviev_bftb_desc:0 "Konstantin Vladov Muraviev"
- BUL_stefan_stefanov:0 "Stefan Stefanov"
- BUL_stefan_stefanov_desc:0 "Stefan Georgiev Stefanov"
- BUL_dimitrana_ivanova:0 "Dimitrana Ivanova"
- BUL_dimitrana_ivanova_desc:0 "$BUL_dimitrana_ivanova$"
- BUL_vasil_kolarov:0 "Vasil Kolarov"
- BUL_vasil_kolarov_desc:0 "Vasil Petrov Kolarov"
- BUL_valko_chervenkov:0 "Valko Chervenkov"
- BUL_valko_chervenkov_desc:0 "Valko Velyov Chervenkov"
- BUL_todor_pavlov:0 "Todor Pavlov"
- BUL_todor_pavlov_desc:0 "Todor Dimitrov Pavlov"
- BUL_ivan_dochev:0 "Ivan Dochev"
- BUL_ivan_dochev_desc:0 "Ivan Dimitrov Dochev"
- BUL_aleksandar_tsankov:0 "Aleksandar Tsankov"
- BUL_aleksandar_tsankov_desc:0 "Aleksandar Tsolov Tsankov"
- BUL_nikola_zhekov:0 "Nikola Zhekov"
- BUL_nikola_zhekov_desc:0 "Nikola Todorov Zhekov"
- BUL_dobri_bozhilov_bftb:0 "Dobri Bozhilov"
- BUL_dobri_bozhilov_bftb_desc:0 "Dobri Bozhilov Hadzhiyanakev"
- BUL_bogdan_filov:0 "Bogdan Filov"
- BUL_bogdan_filov_desc:0 "Bogdan Dimitrov Filov"
- BUL_kimon_georgiev:0 "Kimon Georgiev"
- BUL_kimon_georgiev_desc:0 "Kimon Georgiev Stoyanov"
- BUL_theodosi_daskalov:1 "Teodosi Daskalov"
- BUL_theodosi_daskalov_desc:0 "Teodosi Petrov Daskalov"
- BUL_georgi_petsov_bftb:0 "Georgi Petsov"
- BUL_georgi_petsov_bftb_desc:0 "$BUL_georgi_petsov_bftb$"
- BUL_sava_ivanov:0 "Sava Ivanov"
- BUL_sava_ivanov_desc:0 "Sava Nikolov Ivanov"
- BUL_georgi_drenikov:0 "Georgi Drenikov"
- BUL_georgi_drenikov_desc:0 "Georgi Stoimenov Drenikov"
- BUL_konstantin_lukash:0 "Konstantin Lukash"
- BUL_konstantin_lukash_desc:0 "Konstantin Ludvig Lukash"
- BUL_nikola_hadzipetkov_bftb:0 "Nikola Hadzhipetkov"
- BUL_nikola_hadzipetkov_bftb_desc:0 "Nikola Petkov Hadzhipetkov"
- BUL_kiril_dimitrov_yanchulev:1 "Kiril Yanchulev"
- BUL_kiril_dimitrov_yanchulev_desc:0 "Kiril Dimitrov Yanchulev"
- BUL_vasil_boydev_bftb:0 "Vasil Boydev"
- BUL_vasil_boydev_bftb_desc:0 "Vasil Tenev Boydev"
- BUL_kiril_stanchev_bftb:0 "Kiril Stanchev"
- BUL_kiril_stanchev_bftb_desc:0 "Kiril Nikolov Stanchev"
- BUL_dimitr_ayryanov:0 "Dimitar Ayryanov"
- BUL_dimitr_ayryanov_desc:0 "Dimitar Vasilev Ayryanov"
- BUL_gancho_manchev:0 "Gancho Manchev"
- BUL_gancho_manchev_desc:0 "Gancho Ivanov Manchev"
- BUL_zachari_zachariev:1 "Zahari Zahariev"
- BUL_zachari_zachariev_desc:0 "Zahari Simeonov Zahariev"
- BUL_asen_toshev:0 "Asen Toshev"
- BUL_asen_toshev_desc:0 "Asen Konstantinov Toshev"
- BUL_ivan_variklechkov:0 "Ivan Variklechkov"
- BUL_ivan_variklechkov_desc:0 "Ivan Petrov Variklechkov"
- BUL_stoyan_stoyanov_bftb:0 "Stoyan Stoyanov"
- BUL_stoyan_stoyanov_bftb_desc:0 "Stoyan Iliev Stoyanov"
- BUL_stefan_tsanev:0 "Stefan Tsanev"
- BUL_stefan_tsanev_desc:0 "Stefan Toshev Tsanev"
- BUL_ivan_sapundzhiev:0 "Ivan Sapundzhiev"
- BUL_ivan_sapundzhiev_desc:0 "Ivan Hristov Sapundzhiev"
- BUL_atanas_pavlov_zhilkov_bftb:0 "Atanas Zhilkov"
- BUL_atanas_pavlov_zhilkov_bftb_desc:0 "Atanas Pavlov Zhilkov"
- BUL_stoyan_trendafilov:0 "Stoyan Trendafilov"
- BUL_stoyan_trendafilov_desc:0 "Stoyan Konstantinov Trendafilov"
- BUL_trifon_trifonov:0 "Trifon Trifonov"
- BUL_trifon_trifonov_desc:0 "Trifon Yordanov Trifonov"
- BUL_vladimir_stoychev:0 "Vladimir Stoychev"
- BUL_vladimir_stoychev_desc:0 "Vladimir Dimitrov Stoychev"
- BUL_ferdinand_kozovski:0 "Ferdinand Kozovski"
- BUL_ferdinand_kozovski_desc:0 "Ferdinand Todorov Kozovski"
  BUL_varna_naval_dockyard:0 "Varna Naval Dockyard"
  BUL_dvf:0 "Darzhavna Voenna Fabrika"
  BUL_dvf_desc:0 "Darzhavna Voenna Fabrika - State Military Factory"
