--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -2317,6 +2317,12 @@
  britain.21.t:0 "Tizard triumphant"
  britain.21.d:0 "The US government has not only agreed to our initial proposal but even offered a more long-term cooperation between researchers in our nations."
  britain.21.a:0 "Outstanding!"
+ britain.68.t:0 "[RAJ.GetNameDefCap] Embraces East Indian Company"
+ britain.68.desc:0 "In a show of financial strength Raj streamlined the administration of the East Indian Company and setup monopolies in several ports, this will greatly benefit our holdings in India."
+ britain.68.a:0 "Okay"
+ britain.69.t:0 "[RAJ.GetNameDefCap] Cracks Down on Monopolies"
+ britain.69.desc:0 "In a show of financial independence Raj has ended several East India Company monopolies in ports around the company. Our British agents will surely suffer massive financial losses due to this great injustice!"
+ britain.69.a:0 "Oh No"
  yugoslavia.1.t:0 "Back Coup in Yugoslavia"
  yugoslavia.1.d:0 "The anti-Axis sentiment in Yugoslavia, which we have long tried to balance in an effort to make the country remain neutral and continue our cooperation with the current leadership, has reached a critical point with the nation's new efforts to cooperate with Germany. Despite several of Germany's allies having territorial interests in Yugoslavia, the leadership has chosen to allow German troops into their country.\n\nAn initiative in the Yugoslav Air Force is seeking to overthrow the German-friendly government. Although this could risk destabilizing the region further, it would put a stop to their cooperation with Germany. Should our intelligence operatives support the coup, or try to convince the anti-German faction to hold it off?"
  yugoslavia.1.a:0 "Aid the coup through the SOE."
