--- a/bicemodded/localisation/english/deployment_l_english.yml
+++ b/bicemodded/localisation/english/deployment_l_english.yml
@@ -11,7 +11,7 @@
  DEPLOYMENT_TEMPLATE_ITEM_ADD:0 "§GClick to add to Deployment queue§!"
  DEPLOYMENT_TEMPLATE_ITEM_COPY:0 "§GClick to copy to our deployable templates§!"
  DEPLOYMENT_TEMPLATE_ITEM_EDIT:0 "§GClick to edit division template§!"
- DEPLOYMENT_TEMPLATE_ITEM_VIEW: "§GClick to view division template§!"
+ DEPLOYMENT_TEMPLATE_ITEM_VIEW:0 "§GClick to view division template§!"
  DEPLOYMENT_TRAINING:0 "Training: $VALUE|%Y0$ $MAXVALUE|$"
  DEPLOYMENT_TRAINING_MAXVALUE_DESC:0 "/ $VALUE|H%0$ ( Deployment max experience depends on amount of equipment )"
  DEPLOYMENT_CURRENT_LEVEL:0 "Current deployment level is $NUMBER$ ( $LEVEL|%Y0$ )"
@@ -58,6 +58,7 @@
  GARRISONS:0 "Garrisons"
  GARRISONS_DESC:0 "§TSet priority for equipment going to garrisons§!"
  GARRISONS_DESC:1 "§YGarrisons§!\n§TSet priority for equipment going to garrisons§!"
+ GARRISONS_EMPTY:0 "§GNo current requests for garrisons.§!"
  TIMED_ACTIVITY_TITLE:0 "$NAME$ against $COUNTRY$"
  TIMED_ACTIVITY_ALERT_TITLE:0 "$NAME|H$ against $COUNTRY|H$"
  TIMED_ACTIVITY_ENTRY_DESC:0 "§TSet priority for equipment that will support this diplomatic activity.§!"
