--- a/bicemodded/localisation/english/events_l_english.yml
+++ b/bicemodded/localisation/english/events_l_english.yml
@@ -3815,6 +3815,9 @@
  usa.80.t:0 "House hearings into Presidential misconduct"
  usa.80.desc:0 "A minor scandal originating in the White House has started to gain momentum. Following weeks of media reports implying that a minor administrative official had been taking bribes in return for lucrative government contracts, the House Committe on Expenditures in the Executive has begun to hold hearings to determine if the President was aware of this. While most observers don't believe that this will lead to any major trouble for President [USA.GetLeader], it will no doubt mean that many of the president's supporters will have to lay low for a while."
  usa.80.a:0 "A witchhunt."
+ usa.85.t:0 "Widespread Support for Isolationism"
+ usa.85.desc:0 "An opinion poll making headlines across the country found that 64 percent of Americans favor staying out of the growing conflicts in Europe and Asia. Newspapers claim that the conflicts are of little concern to us and warn that getting involved would jeopardize our economical recovery from the great depression."
+ usa.85.a:0 "How naive"
  usa.91.t:0 "Senator from [USA_congress_investment_state.GetName] offers Support"
  usa.91.desc:0 "The senior Senator from [USA_congress_investment_state.GetName] has approached the government with an offer of support. His state suffers from critical under-investment, and a government-initiated economic stimulus program would certainly make him reconsider his stance on certain proposed government policies. The senator sits on several important committees, and is quite famous for being able to cut deals, making his vote worth several more in both houses."
  usa.91.a:0 "It is a very underdeveloped region."
