--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -5591,6 +5591,10 @@
  JAP_initialadvance:0 "Initial Advance"
  JAP_initialadvance2:0 "Taiyuan Offensive"
  
+ FIN_eero_pakkala:0 "Eero Pakkala"
+ FIN_oiva_lennes:0 "Oiva Lennes"
+ FIN_jukka_rangell:0 "Jukka Rangell"
+ 
  SYR_war:0 "§BOperation Exporter§!"
  SYR_no_join:0 "§8Weak Vichy Garrison§!"
  USA_credit_soviet:0 "US Funding"
