--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -301,8 +301,10 @@
  SOV_scout_plane_equipment_2_short:0 "Yak-4 Recon Aircraft"
  SOV_jet_fighter_equipment_1:0 "Mikoyan-Gurevich MiG-9"
  SOV_jet_fighter_equipment_1_short:0 "MiG-9 Jet-Fighter"
+ SOV_jet_fighter_equipment_1_desc:0 "The Mikoyan-Gurevich MiG-9 was the first turbojet fighter developed by Mikoyan-Gurevich in the years immediately after World War II. It used reverse-engineered German BMW 003 engines. Categorized as a first-generation jet fighter, it suffered from persistent problems with engine flameouts when firing its guns at high altitudes due to gun gas ingestion. A number of different armament configurations were tested, but none solved the problem. Several different engines were evaluated, but none were flown as the prototype of the MiG-15 promised superior performance."
  SOV_jet_fighter_equipment_2:0 "Mikoyan-Gurevich MiG-15"
  SOV_jet_fighter_equipment_2_short:0 "MiG-15 Jet-Fighter"
+ SOV_jet_fighter_equipment_2_desc:0 "The Mikoyan-Gurevich MiG-15 was a jet fighter aircraft developed by Mikoyan-Gurevich for the Soviet Union. The MiG-15 was one of the first successful jet fighters to incorporate swept wings to achieve high transonic speeds. In aerial combat during the Korean War, it outclassed straight-winged jet day fighters, which were largely relegated to ground-attack roles. In response to the MiG-15’s appearance and in order to counter it, the United States Air Force rushed the North American F-86 Sabre to Korea.[1]"
  SOV_jet_tac_bomber_equipment_1:0 "Ilyushin Il-22"
  SOV_jet_tac_bomber_equipment_1_short:0 "Il-22 Jet-Bomber"
  SOV_jet_tac_bomber_equipment_2:0 "Ilyushin Il-28"
