--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -5321,7 +5321,12 @@
  subtech_sea_hurricane_fighter_equipment_2_desc:0 "While replacing the machineguns with cannon will drastically reduce flight performance of the Hurricane, the additional firepower is needed to combat enemy bombers. It is a fighter aircraft."
  subtech_sea_hurricane_fighter_equipment_3:0 "Sea Hurricane Mk IIc"
  subtech_sea_hurricane_fighter_equipment_3_desc:0 "Modifying the Hurricane IIc for use aboard aircraft carriers. It is a fighter aircraft."
- 
+ UK_jet_fighter_equipment_1:0 "Gloster Meteor"
+ UK_jet_fighter_equipment_1_short:0 "Meteor Jet Fighter"
+ UK_jet_fighter_equipment_1_desc:0 "The Gloster Meteor was the first British jet fighter and the Allies' only jet aircraft to engage in combat operations during the Second World War. The Meteor's development was heavily reliant on its ground-breaking turbojet engines, pioneered by Frank Whittle and his company, Power Jets Ltd. Development of the aircraft began in 1940, although work on the engines had been under way since 1936. The Meteor first flew in 1943 and commenced operations on 27 July 1944 with No. 616 Squadron RAF. The Meteor was not a sophisticated aircraft in its aerodynamics, but proved to be a successful combat fighter. Gloster's 1946 civil Meteor F.4 demonstrator G-AIDC was the first civilian-registered jet aircraft in the world.[1] Several major variants of the Meteor incorporated technological advances during the 1940s and 1950s. Thousands of Meteors were built to fly with the RAF and other air forces and remained in use for several decades."
+ UK_jet_fighter_equipment_2:0 "de Havilland Vampire"
+ UK_jet_fighter_equipment_2_short:0 "Vampire Jet Fighter"
+ UK_jet_fighter_equipment_2_desc:0 "The de Havilland Vampire is a British jet fighter which was developed and manufactured by the de Havilland Aircraft Company. It was the second jet fighter to be operated by the RAF, after the Gloster Meteor, and the first to be powered by a single jet engine."
  
  # English Transport #
  ENG_transport_plane_equipment_1:0 "Vickers-Armstrong Wellington Mk.XVI Transport Plane"
