--- a/bicemodded/localisation/english/equip_air_l_english.yml
+++ b/bicemodded/localisation/english/equip_air_l_english.yml
@@ -278,10 +278,6 @@
  JAP_rocket_suicide_equipment_1:0 "Yokosuka MXY7 Ohka"
  JAP_rocket_suicide_equipment_1_short:0 "Ohka"
  JAP_rocket_suicide_equipment_1_desc:0 "The Yokosuka MXY-7 Ohka was a purpose-built, rocket powered human-guided anti-shipping kamikaze attack plane employed by Japan towards the end of World War II."
- JAP_jet_fighter_equipment_1:0 "Nakajima Kikka 'Orange Blossom'"
- JAP_jet_fighter_equipment_1_short:0 "Nakajima 'Orange Blossom'"
- JAP_jet_fighter_equipment_2:0 "Nakajima Ki-201"
- JAP_jet_fighter_equipment_2_short:0 "Ki-201"
  GER_jet_fighter_equipment_1:0 "Messerschmitt Me 262 'Schwalbe'"
  GER_jet_fighter_equipment_1_short:0 "Me 262 'Schwalbe'"
  GER_jet_fighter_equipment_2:0 "Horten Ho 229 A-0"
@@ -357,10 +353,10 @@
  ENG_strat_bomber_equipment_2_short:0 "Lancaster"
  ENG_strat_bomber_equipment_3:0 "Avro Lincoln"
  ENG_strat_bomber_equipment_3_short:0 "Lincoln"
- ENG_jet_fighter_equipment_1:0 "Gloster Meteor"
- ENG_jet_fighter_equipment_1_short:0 "Meteor"
- ENG_jet_fighter_equipment_2:0 "de Havilland Vampire"
- ENG_jet_fighter_equipment_2_short:0 "Vampire"
+ #ENG_jet_fighter_equipment_1:0 "Gloster Meteor"
+ #ENG_jet_fighter_equipment_1_short:0 "Meteor"
+ #ENG_jet_fighter_equipment_2:0 "de Havilland Vampire"
+ #ENG_jet_fighter_equipment_2_short:0 "Vampire"
  ENG_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
  ENG_jet_strat_bomber_equipment_1_short:0 "Valiant"
  ENG_tac_bomber_equipment_0:0 "Armstrong Whitworth Whitley"
@@ -587,20 +583,6 @@
  NZL_strat_bomber_equipment_3_short:0 "Lincoln"
  SAF_strat_bomber_equipment_3_short:0 "Lincoln"
  RAJ_strat_bomber_equipment_3_short:0 "Lincoln"
- AST_jet_fighter_equipment_1:0 "Gloster Meteor"
- NZL_jet_fighter_equipment_1:0 "Gloster Meteor"
- SAF_jet_fighter_equipment_1:0 "Gloster Meteor"
- RAJ_jet_fighter_equipment_1:0 "Gloster Meteor"
- AST_jet_fighter_equipment_1_short:0 "Meteor"
- NZL_jet_fighter_equipment_1_short:0 "Meteor"
- SAF_jet_fighter_equipment_1_short:0 "Meteor"
- RAJ_jet_fighter_equipment_1_short:0 "Meteor"
- NZL_jet_fighter_equipment_2:0 "de Havilland Vampire"
- SAF_jet_fighter_equipment_2:0 "de Havilland Vampire"
- RAJ_jet_fighter_equipment_2:0 "de Havilland Vampire"
- NZL_jet_fighter_equipment_2_short:0 "Vampire"
- SAF_jet_fighter_equipment_2_short:0 "Vampire"
- RAJ_jet_fighter_equipment_2_short:0 "Vampire"
  CAN_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
  AST_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
  NZL_jet_strat_bomber_equipment_1:0 "Vickers Valiant"
@@ -1143,8 +1125,6 @@ NOR_nav_bomber_equipment_3_short:"PBY"
  AST_CAS_equipment_3_short:0 "CAC Woomera"
  AST_CAS_equipment_4:0 "Bristol Beaufighter"
  AST_CAS_equipment_4_short:0 "Beaufighter"
- AST_jet_fighter_equipment_2:0 "CAC Sabre"
- AST_jet_fighter_equipment_2_short:0 "CAC Sabre"
  ARG_heavy_fighter_equipment_3:0 "I.Ae 30 Nancu P1"
  ARG_heavy_fighter_equipment_3_short:0 "Nancu P1"
  ARG_fighter_equipment_0:0 "FMA D.21"
@@ -1315,12 +1295,6 @@ NOR_nav_bomber_equipment_3_short:"PBY"
  ITA_transport_plane_equipment_3:0 "Piaggio P.108T Transport Plane"
  ITA_transport_plane_equipment_3_short:0 "P.108T (T.P)"
  ITA_transport_plane_equipment_3_desc:0 "§LPlanes used to transport troops on paradrop missions.§!"
- 
- 
- CAN_jet_fighter_equipment_1:0 "De Havilland Vampire"
- CAN_jet_fighter_equipment_1_short:0 "Vampire"
- CAN_jet_fighter_equipment_2:0 "CL 100 Canuck"
- CAN_jet_fighter_equipment_2_short:0 "CL 100 Canuck"
  
  #Czech 
  CZE_CAS_equipment_1:0 "Aero Vodochody A.101"
