--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -6574,8 +6574,8 @@
  JAP_jet_fighter_equipment_1_short: "J9Y 'Kikka' (J.F)"
  JAP_jet_fighter_equipment_1_desc: "Jet engined light fighter plane. Kikka is the japanese word for 'Orange Blossom'."
  
- tech_JAP_jet_fighter_equipment_2:0 "Nakajima Ki-201 Jet Fighter"
- JAP_jet_fighter_equipment_2:0 "Nakajima Ki-201 Jet Fighter"
+ tech_JAP_jet_fighter_equipment_2:0 "Nakajima Ki-201 'Fire Dragon' Jet Fighter"
+ JAP_jet_fighter_equipment_2:0 "Nakajima Ki-201 'Fire Dragon' Jet Fighter"
  JAP_jet_fighter_equipment_2_short:0 "Ki-201 (J.F)"
  JAP_jet_fighter_equipment_2_desc: "Jet engined light fighter plane."
  
