upgrade to open beta 1.12.7 fix soviet 1945 fighter

--- a/bicemodded/localisation/english/core_l_english.yml
+++ b/bicemodded/localisation/english/core_l_english.yml
@@ -1952,3 +1952,4 @@
  TRAINING_ACCIDENT:0 "a training accident"
  SUNK_BY_MINES:0 "mines"
  PARADROP_PLANES_REQUIRED: "\n§RThis order cannot be executed:§!\nAn additional $WINGS|H$ transport wing(s) are required."
+ RETAIN_CORES:0 "Retain States With Our Core"
