--- a/bicemodded/localisation/english/tfv_events_l_english.yml
+++ b/bicemodded/localisation/english/tfv_events_l_english.yml
@@ -172,7 +172,7 @@
  tfv_canada.61.a:0 "A shoreline is the only secure border!"
  tfv_canada.62.t:0 "Imperial Hubris"
  tfv_canada.62.d:0 "Invoking their crumbling "imperial right," and calling upon Labrador and Newfoundland's statuses as colonial possessions to be protected [From.GetNameDef] has refused to cede land that is rightfully ours! These people are [Root.GetAdjective]s, and Newfoundland and Labrador hold [Root.GetAdjective] resources, but they must answer to [From.GetAdjective] masters.\nThis is an unacceptable state of affairs, but it is clear that [From.GetNameDef] cannot be convinced of a diplomatic solution..."
- tfv_canada.62.a:0 "[From.GetNameDefCap] will be one!"
+ tfv_canada.62.a:1 "[ROOT.GetNameDefCap] will be one!"
  mex_nationalists_chosen:0 "Side with the Nationalists."
  mex_republicans_chosen:0 "Side with the Republicans."
  tfv_south_africa.1.t:0 "[From.GetNameDefCap] Requests African Mandate"
