Soviet Air v3 ahhhh

--- a/bicemodded/localisation/english/focus_l_english.yml
+++ b/bicemodded/localisation/english/focus_l_english.yml
@@ -2273,8 +2273,8 @@ ITA_join_axis_declare_war_tt:0 "§RIf Germany accepts, we will immediately join 
  SOV_Yakovlev_Fighters_desc:0 "Founded in 1927, the design bureau headed by Aleksandr S. Yakovlev started out when he designed the AIR-1 but soon became a proper "fighter maker" when the prospect of war loomed large. "
  SOV_Lavochkin_Fighters:0 "Lavochkin Fighters"
  SOV_Lavochkin_Fighters_desc:0 "Vladimir Gorbunov was chief of one of the departments of the People's Commissariat of the Aircraft Industry and took part in many meetings and was well informed of the situation in the aircraft industry. His concept, forwarded in 1939, was a cheap aircraft having an all-wood structure, realising the necessity of greatly increasing the output of combat fighters as soon as possible, rind the limitations that might be imposed on this process by the lack of aluminium. 'Even if only one small grove of trees is left in Russia.' thought Gorbunov, 'even then we shall be able to build fighters.' "
- SOV_Sturmovik:0 "Sturmovik"
- SOV_Sturmovik_desc:0 "Our heavy fighters show promising performance, we should develop ground-attack aircraft based on them with heavy armament. These airplanes will be flying tanks that can target enemy armor or fortifications with high precision from above."
+ SOV_Sturmovik:0 "The Sturmovik"
+ SOV_Sturmovik_desc:0 "Sergey Ilyushin along with his team of engineers has developed a new two-seat ground attack aircraft. Heavily armored and armed, it seems promising. We shall commence production at once."
  SOV_aeroflot:0 "Aeroflot"
  SOV_aeroflot_desc:0 "We can jumpstart military bomber airplane production by using Aeroflot's civilian airplane lines."
  SOV_Soviet_Airforce:0 "Soviet Airforce"
